Start texture ground

--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@
 }
 
 :root {
-
+--index: calc(1vw + 1vh)
 }
 
 @font-face {
@@ -20,7 +20,6 @@
 
 body {
     background-color: #010101;
-    color: aliceblue;
     font-family: raleway_f, sans-serif;
     line-height: 1.55;
 }
@@ -33,6 +32,9 @@ body {
     align-items: center;
     justify-content: center;
     text-align: center;
+    overflow: hidden;
+    position: relative;
+    
 }
 
 .layer {
@@ -41,7 +43,44 @@ body {
     position: absolute;
     background-size: cover;
     background-position: center;
+    will-change: transform;
+    z-index: 2;
 }
+
+.layers__base {
+    transform: translate3d(0, calc(var(--scrollTop)/ 1.6), 0);
+    z-index: 0;
+}
+
+.layers__middle {
+    transform: translate3d(0, calc(var(--scrollTop)/ 2.5), 0);
+}
+
+.layers__front {
+    transform: translate3d(0, calc(var(--scrollTop)/ 5.7), 0);
+}
+
+.layer__header {
+    z-index: 1;
+    transform: translate3d(0, calc(var(--scrollTop)/ 2), 0);
+    will-change: transform;
+    text-transform: uppercase;
+    font-weight: 900;
+    color: #e7e7e0;
+    text-shadow: 0 0 15px #8D6D29;
+}
+.layer__title {
+    font-size: calc(var(--index) * 2.5);
+    letter-spacing: calc(var(--index) / 2.25);;
+}
+
+.layer__caption {
+    font-size: calc(var(--index) / 1.175);
+    letter-spacing: calc(var(--index) / 3.5);
+    margin-top: calc(var(--index) * -.75);
+}
+
 .main-article {
     min-height: 100vh;
 }
+
