--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,20 @@ body {
 .main-header {
     position: relative;
 }
+
+.main-header::after {
+    content: '';
+    position: absolute;
+    z-index: 100;
+    width: 100%;
+    height: calc(var(--index) * 10);
+    background-image: url(../img/ground.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    bottom: calc(var(--index) * -4.5);
+}
+
 .layers {
     height: 100vh;
     display: flex;
@@ -82,5 +96,11 @@ body {
 
 .main-article {
     min-height: 100vh;
+    background-size: cover;
+    background-position: center;
+    color: #e7e7e0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
