--- a/css/main.css
+++ b/css/main.css
@@ -95,6 +95,8 @@ body {
 }
 
 .main-article {
+    --main-article-transform: translate3d(0, calc(var(--scrollTop) / -7.5), 0);
+
     min-height: 100vh;
     background-size: cover;
     background-position: center;
@@ -102,5 +104,30 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
+    text-align: center;
 }
 
+.main-article__header {
+    text-transform: uppercase;
+    font-size: calc(var(--index) * 1.8);
+    letter-spacing: calc(var(--index) / 7);
+    transform: var(--main-article-transform);
+     will-change: transform;   
+}
+
+.main-article__paragraph {
+    max-width: calc(var(--index) * 30);
+    font-size: calc(var(--index) * .9);
+    margin-top: calc(var(--index) / 1.25);
+    transform: var(--main-article-transform);
+    will-change: transform;
+}
+
+.copy {
+    position: absolute;
+    bottom: calc(var(--index) * 2.5);
+    opacity: .45;
+    font-size: calc(var(--index) * .75);
+    letter-spacing: calc(var(--index) / 37.5);
+}
